<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu_serial</name>
  <version>0.0.1</version> <!-- 패키지 버전. 일반적으로 초기 버전을 0.0.1로 설정합니다. -->
  <description>A ROS2 package to read and publish IMU data from a serial port.</description> <!-- 패키지 설명을 간략하게 작성했습니다. -->
  <maintainer email="hyjeong7212@naver.com">firstbot</maintainer>
  <license>BSD</license> <!-- BSD 라이선스로 설정했습니다. 필요한 라이선스로 변경해주세요. -->

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
